--- a/task_4_music_player/index.html
+++ b/task_4_music_player/index.html
@@ -1,1 +1,180 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Spotify-Web Player: Music for everyone</title>
+    <link rel="icon" href="image/logo.png" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
+</head>
+
+<body>
+    <div class="main">
+        <div class="sidebar">
+            <div class="nav">
+                <div class="nav-option" style="opacity: 1;">
+                    <i class="fa-solid fa-house"></i>
+                    <a href="#">Home</a>
+                </div>
+                <div class="nav-option">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <a href="#">Search</a>
+                </div>
+            </div>
+            <div class="library">
+                <div class="option">
+                    <div class="lib-option nav-option">
+                        <img src="image/library_icon.png">
+                        <a href="#">Your Library</a>
+                    </div>
+                    <div class="icons">
+                        <i class="fa-solid fa-plus"></i>
+                        <i class="fa-solid fa-arrow-right"></i>
+                    </div>
+                </div>
+                <div class="lib-box">
+                    <div class="box">
+                        <p class="box-p1">Create your first playlist</p>
+                        <p class="box-p2">It's easy, we'll help you</p>
+                        <button class="badge">Create playlist</button>
+                    </div>
+                    <div class="box">
+                        <p class="box-p1">Let's find some podcasts to follow</p>
+                        <p class="box-p2">We'll keep you updated on new episodes</p>
+                        <button class="badge">Browse podcasts</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="main-content">
+            <div class="sticky-nav">
+                <div class="sticky-nav-icons">
+                    <img src="image/backward_icon.png">
+                    <img src="image/forward_icon.png" class="hide">
+                </div>
+                <div class="sticky-nav-options ">
+                    <button class="badge nav-item hide">Explore Premium</button>
+                    <button class="badge nav-item dark-badge"><i class="fa-sharp fa-regular fa-circle-down"
+                            style="margin-right: 5px;"></i>Install App</button>
+                    <i class="fa-regular fa-user nav-item"></i>
+                </div>
+            </div>
+
+
+
+
+            <h2>Recently Played</h2>
+            <div class="cards-container">
+                <div class=" card">
+                    <img src="image/card1img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+            </div>
+
+            <h2>Trending now near you</h2>
+            <div class="cards-container">
+                <div class=" card">
+                    <img src="image/card2img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card3img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card4img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card2img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card3img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+            </div>
+
+            <h2>Featured Charts</h2>
+            <div class="cards-container">
+                <div class=" card">
+                    <img src="image/card5img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card6img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - India</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+
+                <div class=" card">
+                    <img src="image/card1img.jpeg" class="card-img">
+                    <p class="card-title">Top 50 - Global</p>
+                    <p class="card-info">Yourdaily updates of the most played...</p>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="line"></div>
+            </div>
+        </div>
+        <div class="music-player">
+            <div class="album"></div>
+            <div class="player">
+                <div class="player-controls">
+                    <img src="image/player_icon1.png" class="player-controls-icons">
+                    <img src="image/player_icon2.png" class="player-controls-icons">
+                    <img src="image/player_icon3.png" class="player-controls-icons" style="opacity: 1; height: 2rem;">
+                    <img src="image/player_icon4.png" class="player-controls-icons">
+                    <img src="image/player_icon5.png" class="player-controls-icons">
+                </div>
+                <div class="playback-bar">
+                    <span class="curr-time">00:00</span>
+                    <input type="range" min="0" max="100" class="progress-bar">
+                    <span class="total-tome">03:43</span>
+                </div>
+
+
+
+                <audio id="audio" src="assets/song1.mp3"></audio> <!-- Replace with your song -->
+
+
+
+
+
+
+
+
+            </div>
+            <div class="control"><!-- Inside .control (bottom-right) -->
+                <div class="volume-toggle">
+  <i id="volume-icon" class="fa-solid fa-volume-high" style="cursor:pointer;"></i>
+</div>
+                <div class="volume-control">
+                    <input type="range" id="volume" min="0" max="100" value="80">
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
