--- a/Task_1_Image_Gallery/task1.html
+++ b/Task_1_Image_Gallery/task1.html
@@ -30,21 +30,21 @@
     <!-- Filterable Images / Cards Section -->
     <div class="row px-2 mt-4 gap-3" id="filterable-cards">
       <div class="card p-0" data-name="nature">
-        <img src="image/nature-1.jpg" alt="img">
+        <img src="image/image/nature-1.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Mountains</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="nature">
-        <img src="image/nature-2.jpg" alt="img">
+        <img src="image/image/nature-2.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Lights</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="nature">
-        <img src="image/nature-3.jpg" alt="img">
+        <img src="image/image/nature-3.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Nature</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
@@ -52,7 +52,7 @@
       </div>
 
       <div class="card p-0" data-name="nature">
-        <img src="image/nature-3.jpg" alt="img">
+        <img src="image/image/nature-3.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Mountains</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
@@ -60,7 +60,7 @@
       </div>
 
       <div class="card p-0" data-name="cars">
-        <img src="image/car-1.jpg" alt="img">
+        <img src="image/image/car-1.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Retro</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
@@ -74,35 +74,35 @@
         </div>
       </div>
       <div class="card p-0" data-name="cars">
-        <img src="image/car-3.jpg" alt="img">
+        <img src="image/image/car-3.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Classic</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="people">
-        <img src="image/people-1.jpg" alt="img">
+        <img src="image/image/people-1.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Men</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="people">
-        <img src="image/people-2.jpg" alt="img">
+        <img src="image/image/people-2.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Girl</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="city">
-        <img src="image/city1.jpg" alt="img">
+        <img src="image/image/city1.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">City</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="city">
-        <img src="image/city3.jpg" alt="img">
+        <img src="image/image/city3.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">City</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
@@ -110,14 +110,14 @@
       </div>
 
       <div class="card p-0" data-name="city">
-        <img src="image/city3.jpg" alt="img">
+        <img src="image/image/city3.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">City</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
         </div>
       </div>
       <div class="card p-0" data-name="city">
-        <img src="image/city4.jpg" alt="img">
+        <img src="image/image/city4.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">City</h6>
           <p class="card-text">Lorem ipsum dolor..</p>
@@ -125,14 +125,14 @@
       </div>
 
       <div class="card p-0" data-name="temple">
-        <img src="image/temple1.jpg" alt="img">
+        <img src="image/image/temple1.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Temple</h6>
           <p class="card-text">Baba Vishwanath Kashi</p>
         </div>
       </div>
       <div class="card p-0" data-name="temple">
-        <img src="image/temple2.jpg" alt="img">
+        <img src="image/image/temple2.jpg" alt="img">
         <div class="card-body">
           <h6 class="card-title">Temple</h6>
           <p class="card-text">Nim karoli Baba </p>
@@ -141,5 +141,6 @@
     </div>
   </div>
 </body>
+
 
 </html>
