--- a/task_3_Portfolio/index.html
+++ b/task_3_Portfolio/index.html
@@ -49,14 +49,14 @@
         </div>
 
         <div class="home-img">
-            <img src="ankit.jpg.jpeg" alt="" class="img">
+            <img src="image/ankit.jpg.jpeg" alt="" class="img">
         </div>
     </section>
 
     <!-- about section -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="ankit.jpg.jpeg" alt="">
+            <img src="image/ankit.jpg.jpeg" alt="">
         </div>
 
         <div class="about-content">
@@ -104,7 +104,7 @@ I started learning web development out of curiosity, and it quickly grew into a 
 
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="ankit.jpg.jpeg" alt="">
+                <img src="image/ankit.jpg.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Portfolio Website</h4>
                     <p>A fully responsive personal portfolio website designed to showcase my skills and projects. Built with semantic HTML, styled using CSS Flexbox and Grid, and enhanced with interactive JavaScript for smooth user experience.</p>
@@ -113,7 +113,7 @@ I started learning web development out of curiosity, and it quickly grew into a 
             </div>
 
             <div class="portfolio-box">
-                <img src="ankit.jpg.jpeg" alt="">
+                <img src="image/ankit.jpg.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>Spotify Clone</h4>
                     <p>A static front-end clone of the Spotify homepage designed to replicate the original look and feel. Built using semantic HTML and styled with CSS, the project focuses on layout accuracy, design consistency, and responsiveness.</p>
@@ -122,7 +122,7 @@ I started learning web development out of curiosity, and it quickly grew into a 
             </div>
 
             <div class="portfolio-box">
-                <img src="ankit.jpg.jpeg" alt="">
+                <img src="image/ankit.jpg.jpeg" alt="">
                 <div class="portfolio-layer">
                     <h4>health Care Management System</h4>
                     <p>Hospitals/Departments shall be able to enter and Update Data in the Mobile Application </p>
