--- a/task_4_music_player/index.html
+++ b/task_4_music_player/index.html
@@ -8,7 +8,7 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Spotify-Web Player: Music for everyone</title>
-    <link rel="icon" href="image/logo.png" />
+    <link rel="icon" href="image/image/logo.png" />
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,7 +32,7 @@
             <div class="library">
                 <div class="option">
                     <div class="lib-option nav-option">
-                        <img src="image/library_icon.png">
+                        <img src="image/image/library_icon.png">
                         <a href="#">Your Library</a>
                     </div>
                     <div class="icons">
@@ -57,8 +57,8 @@
         <div class="main-content">
             <div class="sticky-nav">
                 <div class="sticky-nav-icons">
-                    <img src="image/backward_icon.png">
-                    <img src="image/forward_icon.png" class="hide">
+                    <img src="image/image/backward_icon.png">
+                    <img src="image/image/forward_icon.png" class="hide">
                 </div>
                 <div class="sticky-nav-options ">
                     <button class="badge nav-item hide">Explore Premium</button>
@@ -74,7 +74,7 @@
             <h2>Recently Played</h2>
             <div class="cards-container">
                 <div class=" card">
-                    <img src="image/card1img.jpeg" class="card-img">
+                    <img src="image/image/card1img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
@@ -83,7 +83,7 @@
             <h2>Trending now near you</h2>
             <div class="cards-container">
                 <div class=" card">
-                    <img src="image/card2img.jpeg" class="card-img">
+                    <img src="image/image/image/card2img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
@@ -95,19 +95,19 @@
                 </div>
 
                 <div class=" card">
-                    <img src="image/card4img.jpeg" class="card-img">
+                    <img src="image/image/card4img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
 
                 <div class=" card">
-                    <img src="image/card2img.jpeg" class="card-img">
+                    <img src="image/image/card2img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
 
                 <div class=" card">
-                    <img src="image/card3img.jpeg" class="card-img">
+                    <img src="image/image/card3img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
@@ -116,19 +116,19 @@
             <h2>Featured Charts</h2>
             <div class="cards-container">
                 <div class=" card">
-                    <img src="image/card5img.jpeg" class="card-img">
+                    <img src="image/image/card5img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
 
                 <div class=" card">
-                    <img src="image/card6img.jpeg" class="card-img">
+                    <img src="image/image/card6img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - India</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
 
                 <div class=" card">
-                    <img src="image/card1img.jpeg" class="card-img">
+                    <img src="image/image/card1img.jpeg" class="card-img">
                     <p class="card-title">Top 50 - Global</p>
                     <p class="card-info">Yourdaily updates of the most played...</p>
                 </div>
@@ -141,11 +141,11 @@
             <div class="album"></div>
             <div class="player">
                 <div class="player-controls">
-                    <img src="image/player_icon1.png" class="player-controls-icons">
-                    <img src="image/player_icon2.png" class="player-controls-icons">
-                    <img src="image/player_icon3.png" class="player-controls-icons" style="opacity: 1; height: 2rem;">
-                    <img src="image/player_icon4.png" class="player-controls-icons">
-                    <img src="image/player_icon5.png" class="player-controls-icons">
+                    <img src="image/image/player_icon1.png" class="player-controls-icons">
+                    <img src="image/image/player_icon2.png" class="player-controls-icons">
+                    <img src="image/image/player_icon3.png" class="player-controls-icons" style="opacity: 1; height:2 rem;">
+                    <img src="image/image/player_icon4.png" class="player-controls-icons">
+                    <img src="image/image/player_icon5.png" class="player-controls-icons">
                 </div>
                 <div class="playback-bar">
                     <span class="curr-time">00:00</span>
@@ -155,7 +155,7 @@
 
 
 
-                <audio id="audio" src="assets/song1.mp3"></audio> <!-- Replace with your song -->
+                <audio id="audio" src=""></audio> <!-- Replace with your song -->
 
 
 
